--- a/CameraHackTool/UI/App.xaml
+++ b/CameraHackTool/UI/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="CameraHackTool.App"
+﻿<Application x:Class="CameraHackTool.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CameraHackTool"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <ResourceDictionary Source="ChipotleUI.xaml"/>
+        <ResourceDictionary Source="ChipotleUI.xaml" />
     </Application.Resources>
 </Application>
